--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 	<!-- banner -->
 	<section class="banner">
-		<img class="banner-img" src="{{ site.baseurl }}/assets/img/header-img.jpg" alt="banner">
+		<img class="banner-img" src="{{ site.baseurl }}assets/img/header-img.jpg" alt="banner">
 		<div class="banner-wrapper-info">
 			<div class="banner-box-center">
 				<h2 class="banner-title">Assessoria de inovação</h2>
