ajuste de layout

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@ title: Home
 			<div class="box-services">
 				<img class="services-icon" src="assets/icons/assessoria.svg" alt="">
 				<div class="services-info">
-					<p class="services-title">Assessoria</p>
+					<h3 class="services-title">Assessoria</h3>
 					<p class="services-description">feita em encontro presencial que proporciona um processo criativo com ferramentas e metodologias que instigam a inovação.</p>	
 				</div>
 			</div>
 			<div class="box-services">
 				<img class="services-icon" src="assets/icons/agilidade.svg" alt="">
 				<div class="services-info">
-					<p class="services-title">Agilidade</p>
+					<h3 class="services-title">Agilidade</h3>
 					<p class="services-description">para criar soluções objetivas, práticas e facilmente aplicáveis.</p>	
 				</div>
 			</div>
 			<div class="box-services">
 				<img class="services-icon" src="assets/icons/inovacao.svg" alt="">
 				<div class="services-info">
-					<p class="services-title">Inovação</p>
+					<h3 class="services-title">Inovação</h3>
 					<p class="services-description">na busca pela evolução. Usamos ferramentas e processos atualizados que trazem resultados alinhados com as necessidades do mercado atual.</p>	
 				</div>
 			</div>
@@ -57,7 +57,7 @@ title: Home
 
 	<!-- best projects -->
 	<section class="sample-best-projects">
-		<p class="section-title">Veja meus melhores trabalho</p>
+		<h4 class="section-title">Veja meus melhores trabalho</h4>
 		<p class="section-subtitle">Cada um conta uma história e uma trajetória. Confira!</p>
 
 		<ul class="list-filter-projects">
@@ -106,7 +106,7 @@ title: Home
 
 	<!-- cooperation -->
 	<section class="sample-cooperation container">
-		<p class="section-title">Com quem colaborei</p>
+		<h4 class="section-title">Com quem colaborei</h4>
 		<p class="section-subtitle">Colaboração: trabalho feito em comum com uma ou mais pessoas</p>
 		<div class="wrapper-cooperation-projects">
 			<div class="cooperation-projects">
@@ -129,7 +129,7 @@ title: Home
 
 	<!-- testimony -->
 	<section class="testimonials">
-		<p class="section-title">Depoimentos</p>
+		<h4 class="section-title">Depoimentos</h4>
 		<p class="section-subtitle">Veja o que os clientes acharam do meu trabalho</p>
 		
 		<!-- slider -->
@@ -203,13 +203,13 @@ title: Home
 
 	<!-- call to action -->
 	<section class="call-to-action">
-		<p class="title-cta">Pronto para inovar?</p>
+		<h4 class="title-cta">Pronto para inovar?</h4>
 		<a href="" class="btn-cta">Vamos falar</a>
 	</section>
 
 	<!-- blog -->
 	<section class="blog">
-		<p class="section-title">Novidades do blog</p>
+		<h4 class="section-title">Novidades do blog</h4>
 		<p class="section-subtitle">Vem ver as novidades do blog. Lá eu escrevo sobre design, inovação, empreendedorismo e muito mais. Não perca!</p>
 
 		<div class="container">
