--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,6 +14,8 @@ permalink: /about/
 			</div>
 		</div>
 	</section>
+
+	<!-- about -->
 	<section class="about-content">
 		<h2 class="section-title">Sobre mim</h2>
 		<p class="paragraph">
@@ -26,6 +28,8 @@ permalink: /about/
 			You can also freely advertise with us, exchange links with us, or be a member of our webring when you register. When you get to be a part of our webring, you get free exposure/traffic as visitors click on the other member sites of the webring. You can advertise your properties for sale or lease with us. And since we are constantly on-line and browsing the web links with us. 
 		</p>
 	</section>
+
+	<!-- services -->
 	<section class="sample-services">
 		<h4 class="section-title">Meus serviços</h4>
 		<div class="services-content container">
@@ -51,5 +55,19 @@ permalink: /about/
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<!-- video -->
+	<section class="video">
+		<img class="video-poster" src="{{ site.baseurl }}/assets/img/poster.jpg" alt="">
+		<div class="wrapper-play-button">
+			<a href="http://www.youtube.com" target="_blank">Play</a>
+		</div>
+	</section>
+
+	<!-- call to action -->
+	<section class="call-to-action">
+		<h4 class="title-cta">Pronto para inovar?</h4>
+		<a href="{{ site.baseurl }}/contact" class="btn-cta">Vamos falar</a>
 	</section>
 </main>
