--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ title: Home
 				<h2 class="banner-title">Assessoria de inovação</h2>
 				<p class="banner-subtitle">Buscamos soluções criativas com processo de design para criar inovação.</p>
 				<div class="row-buttons">
-					<a href="" class="btn-secondary">Sobre mim</a>
-					<a href="{{ site.baseurl }}/about" class="btn-primary">Fale Comigo</a>
+					<a href="{{ site.baseurl }}/about" class="btn-secondary">Sobre mim</a>
+					<a href="{{ site.baseurl }}/contact" class="btn-primary">Fale Comigo</a>
 				</div>
 			</div>
 			<div class="banner-box-bottom">
@@ -259,7 +259,7 @@ title: Home
 	<!-- call to action -->
 	<section class="call-to-action">
 		<h4 class="title-cta">Pronto para inovar?</h4>
-		<a href="" class="btn-cta">Vamos falar</a>
+		<a href="{{ site.baseurl }}/contact" class="btn-cta">Vamos falar</a>
 	</section>
 
 	<!-- blog -->
