--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -40,7 +40,33 @@ permalink: /contact/
 			</div>
 		</div>
 		<div class="contact-form">
-			
+			<form class="form">
+				<div class="row wrapper-box">
+					<div class="box-contact">
+						<input type="text" class="mod-input" name="email" placeholder="Nome*" arial-label="Nome">
+					</div>
+					<div class="box-contact">
+						<input type="text" class="mod-input f-name" name="phone" placeholder="Telefone*" arial-label="Telefone">
+					</div>
+					<div class="box-contact">
+						<input type="text" class="mod-input" name="email" placeholder="Email*" arial-label="Email">
+					</div>
+				</div>
+				<div class="row">
+					<label class="mod-label">Mensagem</label>
+					<textarea class="mod-textarea" name="text"></textarea>
+				</div>
+				<div class="row wrapper-button">
+					<button class="btn-primary">Enviar</button>
+				</div>
+			</form>
+			<div class="success">
+				<p>
+					Sua mensagem foi enviada com sucesso
+					<br>Em breve retornaremos
+					<br>:)
+				</p>
+			</div>
 		</div>
 	</section>
 </main>
