--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -6,7 +6,7 @@ permalink: /contact/
 <main class="contact">
 	<!-- banner -->
 	<section class="banner banner-pages">
-		<img class="banner-img" src="{{ site.baseurl }}assets/img/header-img.jpg" alt="banner">
+		<img class="banner-img" src="{{ site.baseurl }}/assets/img/header-img.jpg" alt="banner">
 		<div class="banner-wrapper-info">
 			<div class="banner-box-center">
 				<h2 class="banner-title">Vamos nos conectar</h2>
@@ -22,19 +22,19 @@ permalink: /contact/
 		<div class="contact-info">
 			<div class="item-contact-info">
 				<a href="tel:+5511976757107">
-					<img src="{{ site.baseurl }}assets/icons/phone.svg" alt="">
+					<img src="{{ site.baseurl }}/assets/icons/phone.svg" alt="">
 					<p>+55 11 97675 7107</p>
 				</a>
 			</div>
 			<div class="item-contact-info">
 				<a href="mailto:ola@giovana.cc">
-					<img src="{{ site.baseurl }}assets/icons/email.svg" alt="">
+					<img src="{{ site.baseurl }}/assets/icons/email.svg" alt="">
 					<p>{{ site.email }}</p>
 				</a>
 			</div>
 			<div class="item-contact-info">
 				<a href="tel:+5511976757107">
-					<img src="{{ site.baseurl }}assets/icons/location.svg" alt="">
+					<img src="{{ site.baseurl }}/assets/icons/location.svg" alt="">
 					<p>São Paulo, SP - Brasil</p>
 				</a>
 			</div>
