--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 title: Sobre
-permalink: /about/
+permalink: about
 ---
 <main class="about">
 	<!-- banner -->
 	<section class="banner banner-pages">
-		<img class="banner-img" src="{{ site.baseurl }}assets/img/perfil.jpg" alt="banner">
+		<img class="banner-img" src="{{ site.baseurl }}/assets/img/perfil.jpg" alt="banner">
 		<div class="banner-wrapper-info">
 			<div class="banner-box-bottom">
 				<a href="mailto:ola@giovana.cc">{{ site.email }}</a>
@@ -34,21 +34,21 @@ permalink: /about/
 		<h4 class="section-title">Meus serviços</h4>
 		<div class="services-content container">
 			<div class="box-services">
-				<img class="services-icon" src="{{ site.baseurl }}assets/icons/assessoria.svg" alt="">
+				<img class="services-icon" src="{{ site.baseurl }}/assets/icons/assessoria.svg" alt="">
 				<div class="services-info">
 					<h3 class="services-title">Assessoria</h3>
 					<p class="services-description">feita em encontro presencial que proporciona um processo criativo com ferramentas e metodologias que instigam a inovação.</p>	
 				</div>
 			</div>
 			<div class="box-services">
-				<img class="services-icon" src="{{ site.baseurl }}assets/icons/agilidade.svg" alt="">
+				<img class="services-icon" src="{{ site.baseurl }}/assets/icons/agilidade.svg" alt="">
 				<div class="services-info">
 					<h3 class="services-title">Agilidade</h3>
 					<p class="services-description">para criar soluções objetivas, práticas e facilmente aplicáveis.</p>	
 				</div>
 			</div>
 			<div class="box-services">
-				<img class="services-icon" src="{{ site.baseurl }}assets/icons/inovacao.svg" alt="">
+				<img class="services-icon" src="{{ site.baseurl }}/assets/icons/inovacao.svg" alt="">
 				<div class="services-info">
 					<h3 class="services-title">Inovação</h3>
 					<p class="services-description">na busca pela evolução. Usamos ferramentas e processos atualizados que trazem resultados alinhados com as necessidades do mercado atual.</p>	
@@ -59,7 +59,7 @@ permalink: /about/
 
 	<!-- video -->
 	<section class="video">
-		<img class="video-poster" src="{{ site.baseurl }}assets/img/poster.jpg" alt="">
+		<img class="video-poster" src="{{ site.baseurl }}/assets/img/poster.jpg" alt="">
 		<div class="wrapper-play-button">
 			<a href="http://www.youtube.com" target="_blank">Play</a>
 		</div>
