--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contato
-permalink: /contact/
+permalink: contact
 ---
 <main class="contact">
 	<!-- banner -->
@@ -33,7 +33,7 @@ permalink: /contact/
 				</a>
 			</div>
 			<div class="item-contact-info">
-				<a href="tel:+5511976757107">
+				<a href="">
 					<img src="{{ site.baseurl }}/assets/icons/location.svg" alt="">
 					<p>São Paulo, SP - Brasil</p>
 				</a>
