--- a/_pages/about.html
+++ b/_pages/about.html
@@ -69,6 +69,6 @@ layout: default
 	<!-- call to action -->
 	<section class="call-to-action">
 		<h4 class="title-cta">Pronto para inovar?</h4>
-		<a href="{{ site.baseurl }}/contact" class="btn-cta">Vamos falar</a>
+		<a href="{{ site.baseurl }}contact" class="btn-cta">Vamos falar</a>
 	</section>
 </main>
