--- a/_pages/about.html
+++ b/_pages/about.html
@@ -20,19 +20,28 @@ layout: default
 	<section class="about-content">
 		<h2 class="section-title">Sobre mim</h2>
 		<p class="paragraph">
-			In efforts to expand our horizons, we welcome every investment-minded individual to join us in the Condotel Investment Opportunity.
-			You can also freely advertise with us, exchange links with us, or be a member of our webring when you register. When you get to be a part of our webring, you get free exposure/traffic as visitors click on the other member sites of the webring. You can advertise your properties for sale or lease with us. And since we are constantly on-line and browsing the web links with us. 
+			Criativa, comunicativa e empreendedora, estou sempre buscando o novo. Formada em Design Gráfico pela Belas Artes de São Paulo, facilitei inovação em diversas empresas.
+			<br><br>
+			Sou apaixonada por pessoas e pela nossa incrível capacidade de gerar inovação. Através do desenvolvimento das relações e conexões interpessoais podemos desenvolver projetos capazes de mudar nossa realidade atual.
+			<br><br>
+			Facilitar inovação é proporcionar a geração de ideias, a convergência de diferentes pontos de vista e superar o senso comum. É fazer o convite certo, no momento adequado. É questionar a certeza e buscar o novo. É alinhar objetivos e expectativas e encontrar nas lacunas a inovação. 
+			Em um trabalho colaborativo com você e sua equipe eu trago provocações, metodologias e ferramentas atuais para que vocês criem as inovações que vão os levar em direção aos seus objetivos.
+
 		</p>
 		<h2 class="section-title">Minha missão</h2>
 		<p class="paragraph">
-			In efforts to expand our horizons, we welcome every investment-minded individual to join us in the Condotel Investment Opportunity.
-			You can also freely advertise with us, exchange links with us, or be a member of our webring when you register. When you get to be a part of our webring, you get free exposure/traffic as visitors click on the other member sites of the webring. You can advertise your properties for sale or lease with us. And since we are constantly on-line and browsing the web links with us. 
+			Criar um futuro mais humano - Contribuir de forma empática e criativa para aumentar a humanização das pessoas e empresas.
+			<br><br>
+			Humanização<br>
+			1.	substantivo feminino<br>
+			2.	ato ou efeito de humanizar(-se), de tornar(-se) benévolo ou mais sociável.
+
 		</p>
 	</section>
 
 	<!-- services -->
 	<section class="sample-services">
-		<h4 class="section-title">Meus serviços</h4>
+		<h4 class="section-title">Meus diferenciais</h4>
 		<div class="services-content container">
 			<div class="box-services">
 				<img class="services-icon" src="{{ site.baseurl }}assets/icons/assessoria.svg" alt="">
