--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: default
 		<img class="banner-img" src="{{ site.baseurl }}assets/img/header-img.jpg" alt="banner">
 		<div class="banner-wrapper-info">
 			<div class="banner-box-center">
-				<h2 class="banner-title">Assessoria de inovação</h2>
-				<p class="banner-subtitle">Buscamos soluções criativas com processo de design para criar inovação.</p>
+				<h2 class="banner-title">Facilitação de inovação</h2>
+				<p class="banner-subtitle">Juntos, resolvemos desafios de forma criativa e inovadora</p>
 				<div class="row-buttons">
 					<a href="{{ site.baseurl }}about" class="btn-secondary">Sobre mim</a>
 					<a href="{{ site.baseurl }}contact" class="btn-primary">Fale Comigo</a>
@@ -34,15 +34,15 @@ layout: default
 			<div class="box-services">
 				<img class="services-icon" src="{{ site.baseurl }}assets/icons/assessoria.svg" alt="">
 				<div class="services-info">
-					<h3 class="services-title">Assessoria</h3>
-					<p class="services-description">feita em encontro presencial que proporciona um processo criativo com ferramentas e metodologias que instigam a inovação.</p>	
+					<h3 class="services-title">Facilitação</h3>
+					<p class="services-description">para tornar a criação da inovação mais tranquila e alinhada com os objetivos da empresa e colaboradores.</p>	
 				</div>
 			</div>
 			<div class="box-services">
 				<img class="services-icon" src="{{ site.baseurl }}assets/icons/agilidade.svg" alt="">
 				<div class="services-info">
 					<h3 class="services-title">Agilidade</h3>
-					<p class="services-description">para criar soluções objetivas, práticas e facilmente aplicáveis.</p>	
+					<p class="services-description">para criar e aprender é indispensável no mundo atual.</p>	
 				</div>
 			</div>
 			<div class="box-services">
@@ -57,11 +57,11 @@ layout: default
 
 	<!-- projects -->
 	<section id="portfolio" class="sample-best-projects">
-		<h4 class="section-title">Veja meus melhores trabalho</h4>
-		<p class="section-subtitle">Cada um conta uma história e uma trajetória. Confira!</p>
+		<h4 class="section-title">Minhas melhores colaborações</h4>
+		<p class="section-subtitle">Veja os projetos mais legais que colaborei.</p>
 
 		<ul class="list-filter-projects">
-			<li id="all-item" class="item-filter-projects active"><span>All</span></li>
+			<li id="todos-item" class="item-filter-projects active"><span>Todos</span></li>
 			{% assign rawtags = "" %}
 			{% for post in site.projects %}
 				{% assign ttags = post.tags | join:'|' | append:'|' %}
@@ -90,7 +90,7 @@ layout: default
 			{% endfor %}
 		</ul>
 
-		<div id="all-container" class="wrapper-projects">
+		<div id="todos-container" class="wrapper-projects">
 		{% assign projects = site.projects | sort: 'order' %}
 		{% for project in projects %}
 			{% assign isbig = forloop.index | modulo:9 %}
@@ -140,7 +140,7 @@ layout: default
 	<!-- cooperation -->
 	<section id="clients" class="sample-cooperation container">
 		<h4 class="section-title">Com quem colaborei</h4>
-		<p class="section-subtitle">Colaboração: trabalho feito em comum com uma ou mais pessoas</p>
+		<p class="section-subtitle">Pessoas e empresas incríveis com quem colaborei (trabalhei junto).</p>
 		<div class="wrapper-cooperation-projects">
 			<div class="cooperation-projects">
 				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
@@ -207,8 +207,8 @@ layout: default
 
 	<!-- testimony -->
 	<section id="testimonials" class="testimonials">
-		<h4 class="section-title">Depoimentos</h4>
-		<p class="section-subtitle">Veja o que os clientes acharam do meu trabalho</p>
+		<h4 class="section-title">O que eles acharam</h4>
+		<p class="section-subtitle">Saiba o que eles acharam da minha colaboração</p>
 		
 		<!-- slider -->
 		<div class="slider-testimonials container">
@@ -281,14 +281,14 @@ layout: default
 
 	<!-- call to action -->
 	<section class="call-to-action">
-		<h4 class="title-cta">Pronto para inovar?</h4>
+		<h4 class="title-cta">Prontos para inovar?</h4>
 		<a href="{{ site.baseurl }}contact" class="btn-cta">Vamos falar</a>
 	</section>
 
 	<!-- blog -->
 	<section id="blog" class="blog">
 		<h4 class="section-title">Novidades do blog</h4>
-		<p class="section-subtitle">Vem ver as novidades do blog. Lá eu escrevo sobre design, inovação, empreendedorismo e muito mais. Não perca!</p>
+		<p class="section-subtitle">No blog eu escrevo sobre design, inovação, empreendedorismo e muito mais. Veja as novidades!</p>
 
 		<div class="container">
 			<div class="wrapper-posts">
