atualizacao e form de contato

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,7 @@ layout: default
 <main class="about">
 	<!-- banner -->
 	<section class="banner banner-pages">
-		<img class="banner-img" src="{{ site.baseurl }}assets/img/perfil.jpg" alt="banner">
+		<img class="banner-img" src="{{ site.baseurl }}upload/perfil.jpg" alt="banner">
 		<div class="banner-wrapper-info">
 			<div class="banner-box-bottom">
 				<a href="mailto:ola@giovana.cc">{{ site.email }}</a>
