--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ layout: default
 <main class="contact">
 	<!-- banner -->
 	<section class="banner banner-pages">
-		<img class="banner-img" src="{{ site.baseurl }}assets/img/header-img.jpg" alt="banner">
+		<img class="banner-img" src="{{ site.baseurl }}upload/header-img.jpg" alt="banner">
 		<div class="banner-wrapper-info">
 			<div class="banner-box-center">
 				<h2 class="banner-title">Vamos nos conectar</h2>
@@ -41,13 +41,13 @@ layout: default
 			</div>
 		</div>
 		<div class="contact-form">
-			<form class="form">
+			<form class="form" action="" name="form_contato">
 				<div class="row wrapper-box">
 					<div class="box-contact">
 						<input type="text" class="mod-input" name="email" placeholder="Nome*" arial-label="Nome">
 					</div>
 					<div class="box-contact">
-						<input type="text" class="mod-input f-name" name="phone" placeholder="Telefone*" arial-label="Telefone">
+						<input type="text" class="mod-input f-phone" name="phone" placeholder="Telefone*" arial-label="Telefone">
 					</div>
 					<div class="box-contact">
 						<input type="text" class="mod-input" name="email" placeholder="Email*" arial-label="Email">
