--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -44,7 +44,7 @@ layout: default
 			<form class="form" action="" name="form_contato">
 				<div class="row wrapper-box">
 					<div class="box-contact">
-						<input type="text" class="mod-input" name="email" placeholder="Nome*" arial-label="Nome">
+						<input type="text" class="mod-input" name="name" placeholder="Nome*" arial-label="Nome">
 					</div>
 					<div class="box-contact">
 						<input type="text" class="mod-input f-phone" name="phone" placeholder="Telefone*" arial-label="Telefone">
@@ -61,13 +61,6 @@ layout: default
 					<button class="btn-primary">Enviar</button>
 				</div>
 			</form>
-			<div class="success">
-				<p>
-					Sua mensagem foi enviada com sucesso
-					<br>Em breve retornaremos
-					<br>:)
-				</p>
-			</div>
 		</div>
 	</section>
 </main>
