--- a/index.html
+++ b/index.html
@@ -143,64 +143,11 @@ layout: default
 		<p class="section-subtitle">Pessoas e empresas incríveis com quem colaborei (trabalhei junto).</p>
 		<div class="wrapper-cooperation-projects">
 			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
+				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/sebrae-logo.png" alt="">
 			</div>
 
 			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer.png" alt="">
-			</div>
-
-			<div class="cooperation-projects">
-				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/layer2.png" alt="">
+				<img class="cooperation-img" src="{{ site.baseurl }}assets/img/bid-logo.png" alt="">
 			</div>
 		</div>
 	</section>
